[tool.poetry]
name = "palera1n"
version = "2.0.0"
description = "iOS 15.0-16.3 (semi-)tethered checkm8 jailbreak"
authors = ["Nebula <me@itsnebula.net>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/palera1n/palera1n"
keywords = ["python", "ios", "ios15", "jailbreak", "checkm8"]
classifiers = [
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
pymobiledevice3 = "^1.29.3"
urllib3 = "^1.26.13"
requests = "^2.28.1"
chardet = "^5.1.0"

[tool.poetry.scripts]
palera1n = 'palera1n.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
